@@ -1,3 +1,5 @@
+	* fix UDP trackers trying all endpoints behind the hostname
+
 0.16.4 release
 
 	* raise the default number of torrents allowed to announce to trackers to 1600
